--- a/Changelog
+++ b/Changelog
@@ -126,7 +126,7 @@
 
 ======================================================
 
-2012-..-.. gorg-... 
+2013-10-20 gorg-0.7.0
             . Remove search support. It is not used on gentoo.org, and
 	      it depends on the obsolete dbi code which does not work
 	      with Ruby 1.9.
